WIP: Updated readme, changing paths in config files, etc.

--- a/code/extract_daily_1minmax.ini
+++ b/code/extract_daily_1minmax.ini
@@ -26,10 +26,10 @@ OriginDir=X:/georisk/HaRIA_B_Wind/data/raw/from_bom/2022/1-minute
 HD01D_Data*.txt
 
 [Output]
-Path=X:/georisk/HaRIA_B_Wind/data/derived/obs/1-minute/events-60/
+Path=../data/events-60
 
 [Logging]
-LogFile=C:/WorkSpace/log/extractStationData.log
+LogFile=../output/extractStationData.log
 LogLevel=INFO
 Verbose=True
 
