AH-1781 Start adding provenance tracking code

--- a/code/tsedenv.yaml
+++ b/code/tsedenv.yaml
@@ -9,9 +9,12 @@ dependencies:
   - matplotlib
   - pandas
   - pytz
+  - lxml
+  - prov
   - seaborn
   - sktime-all-extras
   - gitpython
+  - fiona
   - geopandas
   - cartopy
   - scikit-learn
