WIP: Provenance tracking code

--- a/code/classifyGustEvents.ini
+++ b/code/classifyGustEvents.ini
@@ -1,5 +1,5 @@
 [Files]
-DatFile=C:/workspace/dat/classify_gust_events.dat
+DatFile=../output/classify_gust_events.dat
 NewDatFile=True
 ExcludePastProcessed=True
 DeleteWhenProcessed=False
@@ -26,10 +26,11 @@ OriginDir=X:/georisk/HaRIA_B_Wind/data/raw/from_bom/2022/1-minute
 HD01D_Data*.txt
 
 [Output]
-Path=X:/georisk/HaRIA_B_Wind/data/derived/obs/1-minute/events/
+Path=../data/training
+Format=pickle
 
 [Logging]
-LogFile=C:/WorkSpace/log/extractGustEvents.log
+LogFile=../output/extractGustEvents.log
 LogLevel=INFO
 Verbose=True
 
