--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install pytest
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py') | tee pylint.txt
@@ -26,3 +27,6 @@ jobs:
       with:
         name: pylint report
         path: pylint.txt
+    - name: Run pytest
+      run: |
+        pytest -v --cov=. --cov-report xml
