Change args for pytest

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,4 +29,4 @@ jobs:
         path: pylint.txt
     - name: Run pytest
       run: |
-        pytest -v --cov=. --cov-report xml
+        pytest -x --cov=. --cov-report xml
