AH-1781 Update configuration file

--- a/code/extract_training_events.ini
+++ b/code/extract_training_events.ini
@@ -14,14 +14,14 @@ CutOffDelta=36
 Files=*.*
 
 [Categories]
-1=Stations
-2=Input
+1=StationFiles
+2=ObservationFiles
 
-[Stations]
+[StationFiles]
 OriginDir=X:/georisk/HaRIA_B_Wind/data/raw/from_bom/2022/1-minute
 HD01D_StnDet*.txt
 
-[Input]
+[ObservationFiles]
 OriginDir=X:/georisk/HaRIA_B_Wind/data/raw/from_bom/2022/1-minute
 Threshold=90
 HD01D_Data*.txt
