AH-1781 Move station details to separate process
Moved the extraction of station details to a separate script. While the existing code ran without error, this separates the station details from the observation extraction.

--- a/code/extract_station_data.ini
+++ b/code/extract_station_data.ini
@@ -1,5 +1,5 @@
 [Files]
-DatFile=../output/extract_training_events.dat
+DatFile=../output/extract_station_data.dat
 NewDatFile=True
 ExcludePastProcessed=True
 DeleteWhenProcessed=False
@@ -14,19 +14,18 @@ CutOffDelta=36
 Files=*.*
 
 [Categories]
-1=ObservationFiles
+1=StationFiles
 
-[ObservationFiles]
+[StationFiles]
 OriginDir=X:/georisk/HaRIA_B_Wind/data/raw/from_bom/2022/1-minute
-Threshold=90
-HD01D_Data*.txt
+HD01D_StnDet*.txt
 
 [Output]
 Path=../data/training
 Format=pickle
 
 [Logging]
-LogFile=../output/extractTrainingEventStationData.log
+LogFile=../output/extractStationData.log
 LogLevel=INFO
 Verbose=True
 
